# portfolio_dj

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
pages/: urls.py
pages/templates/pages/: home.html
personal_portfolio/: settings.py  urls.py
projects/: admin.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_image.py  0003_technology_remove_project_technology_and_more.py
projects/templates/projects/: project_detail.html  project_index.html
templates/: base.html
workflows/: deploy.yml
