[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Mateusz-Strz <mateusz.strzezek01@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
awscli = "^1.37.8"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
